libs/bng/test/negative/N0012_rate_expr_cyclic.bngl
begin parameters
   a b
   b a
end parameters

begin molecule types
   A()
   B()
   C()
end molecule types

begin reaction rules
  A() + B() -> C() a
end reaction rules
